mal/src/main/antlr4/br/ufscar/dc/compiladores/mal/.antlr/malParser.java
// Generated from c:\Users\fehie\OneDrive\Área de Trabalho\Faculdade\Compiladores\t3\t4-compila-dores\t6-compila_dores\mal\src\main\antlr4\br\u005Cufscar\dc\compiladores\mal\mal.g4 by ANTLR 4.9.2

  import br.ufscar.dc.compiladores.mal.File;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class malParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, Comentario=41, WhiteSpace=42, NUM=43, NOME=44, ErroComentarioCodigo=45, 
		ErroAddComentario=46, ANY=47;
	public static final int
		RULE_delimitador = 0, RULE_nota = 1, RULE_qtdEps = 2, RULE_tipo_anime = 3, 
		RULE_genero = 4, RULE_publico_alvo = 5, RULE_nome_anime = 6, RULE_declare_nome = 7, 
		RULE_program = 8, RULE_corpo = 9, RULE_declare_anime = 10, RULE_total_eps = 11, 
		RULE_declare_avaliacao = 12, RULE_cmdAddNome = 13, RULE_cmdAddNota = 14, 
		RULE_cmdAddStatus = 15, RULE_cmdAddEps = 16, RULE_cmdAddComentario = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"delimitador", "nota", "qtdEps", "tipo_anime", "genero", "publico_alvo", 
			"nome_anime", "declare_nome", "program", "corpo", "declare_anime", "total_eps", 
			"declare_avaliacao", "cmdAddNome", "cmdAddNota", "cmdAddStatus", "cmdAddEps", 
			"cmdAddComentario"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'TV'", "'Filme'", "'OVA'", "'Especial'", "'Acao'", "'Aventura'", 
			"'Drama'", "'Comedia'", "'Terror'", "'Fantasia'", "'Scifi'", "'Romance'", 
			"'Misterio'", "'SliceOfLife'", "'Sobrenatural'", "'Suspense'", "'Musical'", 
			"'Esporte'", "'Shounen'", "'Seinen'", "'Shoujo'", "'R18'", "'inicio'", 
			"'Nome'", "'Tipo'", "'Genero'", "'Quantidade_Eps'", "'Publico_Alvo'", 
			"'fim'", "'comeco_avaliacao'", "'Nota'", "'Status'", "'fim_avaliacao'", 
			"'Completo'", "'Assistindo'", "'Abandonado'", "'\n'", "'\r'", "'}'", 
			null, null, null, null, "'['", "'{'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "Comentario", "WhiteSpace", "NUM", "NOME", 
			"ErroComentarioCodigo", "ErroAddComentario", "ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public malParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DelimitadorContext extends ParserRuleContext {
		public DelimitadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delimitador; }
	}

	public final DelimitadorContext delimitador() throws RecognitionException {
		DelimitadorContext _localctx = new DelimitadorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_delimitador);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotaContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(malParser.NUM, 0); }
		public NotaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nota; }
	}

	public final NotaContext nota() throws RecognitionException {
		NotaContext _localctx = new NotaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nota);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QtdEpsContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(malParser.NUM, 0); }
		public QtdEpsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qtdEps; }
	}

	public final QtdEpsContext qtdEps() throws RecognitionException {
		QtdEpsContext _localctx = new QtdEpsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_qtdEps);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_animeContext extends ParserRuleContext {
		public Tipo_animeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_anime; }
	}

	public final Tipo_animeContext tipo_anime() throws RecognitionException {
		Tipo_animeContext _localctx = new Tipo_animeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipo_anime);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GeneroContext extends ParserRuleContext {
		public GeneroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genero; }
	}

	public final GeneroContext genero() throws RecognitionException {
		GeneroContext _localctx = new GeneroContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_genero);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Publico_alvoContext extends ParserRuleContext {
		public Publico_alvoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_publico_alvo; }
	}

	public final Publico_alvoContext publico_alvo() throws RecognitionException {
		Publico_alvoContext _localctx = new Publico_alvoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_publico_alvo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nome_animeContext extends ParserRuleContext {
		public TerminalNode NOME() { return getToken(malParser.NOME, 0); }
		public Nome_animeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nome_anime; }
	}

	public final Nome_animeContext nome_anime() throws RecognitionException {
		Nome_animeContext _localctx = new Nome_animeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nome_anime);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(NOME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_nomeContext extends ParserRuleContext {
		public Nome_animeContext nome_anime() {
			return getRuleContext(Nome_animeContext.class,0);
		}
		public Declare_nomeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_nome; }
	}

	public final Declare_nomeContext declare_nome() throws RecognitionException {
		Declare_nomeContext _localctx = new Declare_nomeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declare_nome);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			nome_anime();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			corpo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpoContext extends ParserRuleContext {
		public List<Declare_animeContext> declare_anime() {
			return getRuleContexts(Declare_animeContext.class);
		}
		public Declare_animeContext declare_anime(int i) {
			return getRuleContext(Declare_animeContext.class,i);
		}
		public List<Declare_avaliacaoContext> declare_avaliacao() {
			return getRuleContexts(Declare_avaliacaoContext.class);
		}
		public Declare_avaliacaoContext declare_avaliacao(int i) {
			return getRuleContext(Declare_avaliacaoContext.class,i);
		}
		public CorpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo; }
	}

	public final CorpoContext corpo() throws RecognitionException {
		CorpoContext _localctx = new CorpoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_corpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				declare_anime();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__23 );
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__30) {
				{
				{
				setState(59);
				declare_avaliacao();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_animeContext extends ParserRuleContext {
		public Declare_nomeContext declare_nome() {
			return getRuleContext(Declare_nomeContext.class,0);
		}
		public Tipo_animeContext tipo_anime() {
			return getRuleContext(Tipo_animeContext.class,0);
		}
		public GeneroContext genero() {
			return getRuleContext(GeneroContext.class,0);
		}
		public Total_epsContext total_eps() {
			return getRuleContext(Total_epsContext.class,0);
		}
		public Publico_alvoContext publico_alvo() {
			return getRuleContext(Publico_alvoContext.class,0);
		}
		public Declare_animeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_anime; }
	}

	public final Declare_animeContext declare_anime() throws RecognitionException {
		Declare_animeContext _localctx = new Declare_animeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declare_anime);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(T__23);
			setState(66);
			match(T__24);
			setState(67);
			match(T__0);
			setState(68);
			declare_nome();
			setState(69);
			match(T__25);
			setState(70);
			match(T__0);
			setState(71);
			tipo_anime();
			setState(72);
			match(T__26);
			setState(73);
			match(T__0);
			setState(74);
			genero();
			setState(75);
			match(T__27);
			setState(76);
			match(T__0);
			setState(77);
			total_eps();
			setState(78);
			match(T__28);
			setState(79);
			match(T__0);
			setState(80);
			publico_alvo();
			setState(81);
			match(T__29);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Total_epsContext extends ParserRuleContext {
		public QtdEpsContext qtdEps() {
			return getRuleContext(QtdEpsContext.class,0);
		}
		public Total_epsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_total_eps; }
	}

	public final Total_epsContext total_eps() throws RecognitionException {
		Total_epsContext _localctx = new Total_epsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_total_eps);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			qtdEps();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_avaliacaoContext extends ParserRuleContext {
		public CmdAddNomeContext cmdAddNome() {
			return getRuleContext(CmdAddNomeContext.class,0);
		}
		public CmdAddNotaContext cmdAddNota() {
			return getRuleContext(CmdAddNotaContext.class,0);
		}
		public CmdAddStatusContext cmdAddStatus() {
			return getRuleContext(CmdAddStatusContext.class,0);
		}
		public CmdAddEpsContext cmdAddEps() {
			return getRuleContext(CmdAddEpsContext.class,0);
		}
		public CmdAddComentarioContext cmdAddComentario() {
			return getRuleContext(CmdAddComentarioContext.class,0);
		}
		public Declare_avaliacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_avaliacao; }
	}

	public final Declare_avaliacaoContext declare_avaliacao() throws RecognitionException {
		Declare_avaliacaoContext _localctx = new Declare_avaliacaoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_declare_avaliacao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__30);
			setState(86);
			match(T__24);
			setState(87);
			match(T__0);
			setState(88);
			cmdAddNome();
			setState(89);
			match(T__31);
			setState(90);
			match(T__0);
			setState(91);
			cmdAddNota();
			setState(92);
			match(T__32);
			setState(93);
			match(T__0);
			setState(94);
			cmdAddStatus();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUM) {
				{
				setState(95);
				cmdAddEps();
				}
			}

			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ErroAddComentario) {
				{
				setState(98);
				cmdAddComentario();
				}
			}

			setState(101);
			match(T__33);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdAddNomeContext extends ParserRuleContext {
		public Nome_animeContext nome_anime() {
			return getRuleContext(Nome_animeContext.class,0);
		}
		public CmdAddNomeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdAddNome; }
	}

	public final CmdAddNomeContext cmdAddNome() throws RecognitionException {
		CmdAddNomeContext _localctx = new CmdAddNomeContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_cmdAddNome);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			nome_anime();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdAddNotaContext extends ParserRuleContext {
		public NotaContext nota() {
			return getRuleContext(NotaContext.class,0);
		}
		public CmdAddNotaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdAddNota; }
	}

	public final CmdAddNotaContext cmdAddNota() throws RecognitionException {
		CmdAddNotaContext _localctx = new CmdAddNotaContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_cmdAddNota);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			nota();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdAddStatusContext extends ParserRuleContext {
		public CmdAddStatusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdAddStatus; }
	}

	public final CmdAddStatusContext cmdAddStatus() throws RecognitionException {
		CmdAddStatusContext _localctx = new CmdAddStatusContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_cmdAddStatus);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__34) | (1L << T__35) | (1L << T__36))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdAddEpsContext extends ParserRuleContext {
		public QtdEpsContext qtdEps() {
			return getRuleContext(QtdEpsContext.class,0);
		}
		public CmdAddEpsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdAddEps; }
	}

	public final CmdAddEpsContext cmdAddEps() throws RecognitionException {
		CmdAddEpsContext _localctx = new CmdAddEpsContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_cmdAddEps);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			qtdEps();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdAddComentarioContext extends ParserRuleContext {
		public List<TerminalNode> ErroAddComentario() { return getTokens(malParser.ErroAddComentario); }
		public TerminalNode ErroAddComentario(int i) {
			return getToken(malParser.ErroAddComentario, i);
		}
		public CmdAddComentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdAddComentario; }
	}

	public final CmdAddComentarioContext cmdAddComentario() throws RecognitionException {
		CmdAddComentarioContext _localctx = new CmdAddComentarioContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_cmdAddComentario);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(ErroAddComentario);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << Comentario) | (1L << WhiteSpace) | (1L << NUM) | (1L << NOME) | (1L << ErroComentarioCodigo) | (1L << ANY))) != 0)) {
				{
				{
				setState(112);
				_la = _input.LA(1);
				if ( _la <= 0 || ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << ErroAddComentario))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(T__39);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}